client/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Fonts */
.alexandria {
	font-family: "Alexandria", sans-serif;
	font-optical-sizing: auto;
}

.montserrat {
	font-family: "Montserrat", sans-serif;
	font-optical-sizing: auto;
}

.cormorant {
	font-family: "Cormorant Upright", serif;
	font-optical-sizing: auto;
}

/* font face for unna */

@font-face {
	font-family: 'Unna';
	src: url('/fonts/unna/Unna-Regular.otf') format('opentype');
	font-weight: 400;
	/* Regular */
	font-style: normal;
}

@font-face {
	font-family: 'Unna';
	src: url('/fonts/unna/Unna-Bold.otf') format('opentype');
	font-weight: 700;
	/* Bold */
	font-style: normal;
}

@font-face {
	font-family: 'Unna';
	src: url('/fonts/unna/Unna-BoldItalic.otf') format('opentype');
	font-weight: 700;
	/* Bold */
	font-style: italic;
}

@font-face {
	font-family: 'Unna';
	src: url('/fonts/unna/Unna-Italic.otf') format('opentype');
	font-weight: 400;
	/* Regular */
	font-style: italic;
}

@font-face {
	font-family: 'Unna';
	src: url('/fonts/unna/Unna-Light.otf') format('opentype');
	font-weight: 300;
	/* Light */
	font-style: normal;
}

@font-face {
	font-family: 'Unna';
	src: url('/fonts/unna/Unna-LightItalic.otf') format('opentype');
	font-weight: 300;
	/* Light */
	font-style: italic;
}

@font-face {
	font-family: 'Unna';
	src: url('/fonts/unna/Unna-Medium.otf') format('opentype');
	font-weight: 500;
	/* Medium */
	font-style: normal;
}

@font-face {
	font-family: 'Unna';
	src: url('/fonts/unna/Unna-MediumItalic.otf') format('opentype');
	font-weight: 500;
	/* Medium */
	font-style: italic;
}

/* font face for unna end*/

/* Fonts end*/

#contact-form label {
	@apply montserrat font-light text-lg;
}


#contact-form input {
	@apply mt-2 rounded-2xl text-xl p-4 w-full mb-6;
}

#contact-form textarea {
	@apply mt-2 rounded-2xl text-xl p-4 w-full mb-6;
}


#order-form div p {
	@apply relative text-xl ml-4 py-8 text-center w-full
}

#order-form {
	@apply montserrat font-light p-16 background-tertiary md:w-[30rem] flex flex-col text-center
}

.form-header {
	@apply bg-[#faf9f9] montserrat font-light text-center text-3xl mb-8 md:w-fit w-full py-6 place-self-center text-primary
}

body {
	@apply p-4 md:p-8
}

.background-primary {
	@apply bg-[#dbd7d3];
}

.background-secondary {
	@apply bg-[#edebe9]
}

.background-tertiary {
	@apply bg-[#f4f3f2]
}

.text-primary {
	@apply text-black
}

.text-secondary {
	@apply text-[#4a4b4e]
}


.slider-container {
	@apply flex items-center justify-center md:gap-4 w-full overflow-hidden relative;
	touch-action: pan-y pinch-zoom;
}

.slider {
	@apply w-full overflow-hidden;
}

.slider-track {
	@apply flex transition-transform ease-in-out duration-500 will-change-transform;
	touch-action: pan-x;
}

.slider-item {
	@apply flex-shrink-0 basis-1/3 flex flex-col items-center text-center;
}

.footer {
	@apply flex flex-col items-center justify-center montserrat text-lg gap-y-4
}

.footer a p {
	@apply ml-4
}

.footer a a {
	@apply ml-4
}

.image-gallery-thumbnails-container {
	@apply flex items-start
}

.image-gallery-thumbnail.active {
	@apply !border-[#edebe9]
}

.image-gallery-thumbnail:focus {

	@apply !border-[#f8f6f4]
}

.image-gallery-thumbnail:hover {
	@apply !border-[#f8f6f4]
}

.loader {
	width: 28px;
	height: 28px;
	border: 3px dotted #FFF;
	border-style: solid solid dotted dotted;
	border-radius: 50%;
	display: inline-block;
	position: relative;
	box-sizing: border-box;
	animation: rotation 2s linear infinite;
}

@keyframes rotation {
	0% {
		transform: rotate(0deg);
	}

	100% {
		transform: rotate(360deg);
	}
}

@keyframes rotationBack {
	0% {
		transform: rotate(0deg);
	}

	100% {
		transform: rotate(-360deg);
	}
}

button {
	@apply hover:opacity-80 transition-opacity duration-200 ease-in-out;
}

a {
	@apply opacity-100 hover:opacity-80 transition-opacity duration-200 ease-in-out;
}

input {
	@apply focus:outline-none focus:ring-[3px] focus:ring-[#4a4b4e] transition-all duration-150;
}

